# business-summaries-llm-helper

./: .gitignore  CHANGELOG.md  FINAL_TEST_REPORT.md  LICENSE  README.md  TROUBLESHOOTING.md  config.yaml.example  pyproject.toml
.amazonq/rules/: kiro-development.md
.kiro/steering/: communication-language.md  poetry-development-standards.md  project-structure-standards.md  testing-environment-setup.md
docs/: DEVELOPER_GUIDE.md  DOCUMENTATION_SUMMARY.md  SYSTEM_PROMPT_GUIDE.md
history_references/: .gitkeep
history_references/business_cases/: customer_complaint_resolution.md
history_references/technical_issues/: database_performance_issue.txt
history_references_example/: README.md
history_references_example/technical_issues/: login_failure_case.md
src/: __init__.py  cli_demo.py  main.py
src/clients/: __init__.py  bedrock_client.py
src/config/: __init__.py  config_manager.py
src/exceptions/: __init__.py  system_prompt_exceptions.py
src/models/: __init__.py
src/processors/: __init__.py  history_processor.py
src/services/: __init__.py  app_controller.py  model_manager.py  prompt_builder.py  system_prompt_manager.py  system_prompt_service.py
src/ui/: __init__.py  gradio_interface.py  prompt_ui_components.py
src/utils/: __init__.py
system_prompts/: default.md
tests/: __init__.py  conftest.py
tests/compatibility/: test_config_compatibility.py
tests/e2e/: TEST_SUMMARY.md  __init__.py  test_base.py  test_compatibility.py  test_state_recovery.py  test_ui_responsiveness.py  test_user_workflow.py
tests/integration/: __init__.py  (+6 more)
(+31 files in other folders)
